添加首页轮播

--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -1,7 +1,11 @@
 $colors:(
     "primary":#db9e3f,
+    "info":#4b67af,
     "white":#fff,
     "light":#f9f9f9,
+    'light-1': #d4d9de,
+    'grey': #999,
+    "grey-1":#666,
     "dark-1": #343440,
     "dark":#222,
     "black":#000
@@ -10,11 +14,13 @@ $colors:(
 // font-size
 // $base-font-size:1rem;  //13px
 $font-size:(
+    xxxs:0.4615rem,
+    xxs:0.6154rem,  //8px
     xs:0.7692rem,  //10px
     sm:0.9231rem, //12px
     md:1rem,        //13px
     lg:1.0769rem,   //14px
-    xg:1.2308rem,   //16px
+    xlg:1.2308rem,   //16px
 );
 
 $jc-flex:(
@@ -57,4 +63,4 @@ $spacing-direction:(
 );
 
 // m-0, mx-0,  mt-0 three types
-$spacing-sizes:(0 : 0, 1: 0.25, 2: 0.5, 3: 1, 4: 1.5, 5: 3.0);
+$spacing-sizes:(0 : 0, 1: 0.25, 2: 0.5, 3: 0.75, 4: 1, 5: 1.5, 6: 3.0);
