--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -14,6 +14,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.2em;
     background: #f1f1f1;
+    -webkit-font-smoothing:antialiased;
 }
 
 a{
@@ -34,14 +35,14 @@ a{
         color: $color;
     }
     .bg-#{$colorKey}{
-        color: $color;
+        background-color: $color;
     }
 }
 
 //text-align
 @each $var in (left, center, right) {
     .text-#{$var}{
-        text-align: $var;
+        text-align: $var!important;
     }
 }
 
@@ -102,10 +103,12 @@ a{
     //mx-0,my-0
     @each $typeKey, $type in $spacing-types{
         .#{$typeKey}x-#{$level}{
-            #{$type}:0 $size*$base-spacing-size;
+            #{$type}-left:$size*$base-spacing-size;
+            #{$type}-right:$size*$base-spacing-size;
         }
         .#{$typeKey}y-#{$level}{
-            #{$type}:$size*$base-spacing-size 0
+            #{$type}-top:$size*$base-spacing-size;
+            #{$type}-bottom:$size*$base-spacing-size;
         }
     }
     //mt-0
@@ -119,6 +122,22 @@ a{
     
 }
 
-.button{
+.btn{
     border: none;
+    border-radius: 0.1538rem;
+    font-size: map-get($font-size, 'xs');
+    padding: 0.3rem 0.7rem;
+    font-weight: 500;
 }
+
+.nav{
+
+    .nav-item{
+        padding-bottom: 0.2rem;
+        border-bottom: 3px solid transparent;
+        &.active{
+            border-bottom: 3px solid map-get($colors, "white")
+        }
+    }
+}
+
