--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $colors:(
     "black":#000
 );
 
+$border-color:map-get($colors, 'light-1');
 // font-size
 // $base-font-size:1rem;  //13px
 $font-size:(
