列表组件-新闻资讯页

--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -22,6 +22,7 @@ $font-size:(
     md:1rem,        //13px
     lg:1.0769rem,   //14px
     xlg:1.2308rem,   //16px
+    xxlg:1.5385rem,   //20px
 );
 
 $jc-flex:(
