录入英雄数据

--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -122,6 +122,14 @@ a{
     
 }
 
+//text-overflow
+.text-ellipisis{
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .btn{
     border: none;
     border-radius: 0.1538rem;
