--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -85,6 +85,12 @@ a{
     }
 }
 
+@each $var in (left,top,right,bottom) {
+    .border-#{$var}{
+        border: 1px solid $border-color;
+    }
+}
+
 // 6.伸缩
 .flex-1{
     flex:1;
@@ -255,3 +261,4 @@ a{
       height: 1.7692rem
     }
 }
+
