--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -2,7 +2,9 @@ $colors:(
     "primary":#db9e3f,
     "info":#4b67af,
     "blue":#4394e4,
+    "blue-1":#1f3695,
     "white":#fff,
+    "danger":#781a16,
     "light":#f9f9f9,
     'light-1': #d4d9de,
     'grey': #999,
